test zpool install

--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -1,10 +1,7 @@
 on:
   pull_request:
-    target:
-      - main
 
-name: "Trigger: Push action"
-permissions: {}
+name: "shellcheck"
 
 jobs:
   shellcheck:
