--- a/.github/workflows/lint-markdown.yml
+++ b/.github/workflows/lint-markdown.yml
@@ -18,11 +18,10 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v41
         with:
-          files_yaml: |
-            markdown:
-              - '**.md'
+          files: |
+              - **.md
       - name: Prettify code
-        if: steps.changed-files.outputs.markdown_any_changed == 'true'
+        if: steps.changed-files.outputs.any_changed == 'true'
         uses: creyD/prettier_action@v4.3
         with:
-          prettier_options: --write ${{ steps.changed-files.outputs.markdown_all_changed_files }}
+          prettier_options: --write ${{ steps.changed-files.outputs.all_changed_files }}
