Update lint workflow to ignore certain files

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -44,6 +44,9 @@ jobs:
           files: |
              **.yml
              **.yaml
+          files_ignore:
+             .github/workflows/**.yml
+             .github/workflows/**.yaml
   sh-check-changed:
     name: Check changed shellscripts
     needs: list-files
