--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -8,22 +8,20 @@ permissions:
   contents: read
 
 jobs:
-  build-deb:
-    name: build deb package
+  build-packages:
+    name: Build packages
     runs-on: ubuntu-latest
+    strategy:
+        matrix:
+            target: [deb, rpm, pkg]
     env:
-      version: ${{ github.sha }}
-    outputs:
-      sh-changed-files:  ${{ steps.changed-files-sh.outputs.all_changed_files }}
-      sh-any-changed:    ${{ steps.changed-files-sh.outputs.any_changed }}
-      md-changed-files:  ${{ steps.changed-files-md.outputs.all_changed_files }}
-      md-any-changed:    ${{ steps.changed-files-md.outputs.any_changed }}
+        version: ${{ github.sha }}
     steps:
-      - uses: actions/checkout@v4
-      - run: mkdir build
-      - name: action-fpm
-        uses: bpicode/github-action-fpm@v0.9.3
-        with:
-          fpm_args: './build'
-          fpm_opts: "--verbose -t deb -p check_zpool-${version}.deb --depends zfsutils-linux --version 1.0.0"
-      - run: ls -l build
+        - uses: actions/checkout@v4
+#        - run: mkdir build
+        - name: action-fpm
+          uses: bpicode/github-action-fpm@v0.9.3
+          with:
+            fpm_args: "."
+            fpm_opts: "--verbose -t ${{ matrix.target }} -p check_zpool-${version}.${{ matrix.target }} --depends zfsutils-linux --version 1.0.0"
+        - run: ls -l 
