--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -43,7 +43,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Check syntax
-        uses: Klintrup/simple-shell-syntax-check@v2.3.0
+        uses: Klintrup/simple-shell-syntax-check@2eedb927f141f782b56748b98657f077aa587ba1 # v2.3.0
         with:
           files: ${{ needs.list-files.outputs.sh-changed-files }}
           install_missing_shell: true
